--- a/main.html
+++ b/main.html
@@ -10,7 +10,47 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1>Avatar: The Way of Water</h1>
+	<nav class="nav_Bar">
+		<ul>
+			<li id="nav-actor"><a href="#actor">Actors</a></li>
+			<li id="nav-quote"><a href="#quote">Quote</a></li>
+		</ul>
+	</nav>
+	<summary>
+			<p>Jake Sully lives with his newfound family formed on the extrasolar moon Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri 
+and the army of the Na'vi race to protect their home.</p>
+		</summary>
+	<section>
+		<div id="actor">
+		<h3>Actors</h3>
+			<ul><li>Samuel Henry John Worthington was born August 2, 1976 in Surrey, England. His parents, Jeanne (Martyn) and Ronald Worthington, a power plant employee, moved the family to Australia when he was six months old, and raised him and his 
+				sister Lucinda in Warnbro, a suburb of Perth, Western Australia.</li>
+				<li>Zoe Saldana was born on June 19, 1978 in Passaic, New Jersey, to Asalia Nazario and Aridio Saldaña. Her father was Dominican and her mother is Puerto Rican. She was raised in Queens, New York. When she was 10 years old, she and her family moved to the Dominican Republic, where they would live for the next seven years. While living there, Zoe discovered a keen interest in performance dance and began her training at the prestigious ECOS Espacio de Danza Dance Academy where she learned ballet as well as other dance forms. Not only did her training provide an excellent outlet for the enthusiastic and energetic youngster,
+ it would also prove to be a fortunate precursor for the start of her professional acting career</li>
+<li>Sigourney Weaver was born Susan Alexandra Weaver, on October 8, 1949, in Leroy Hospital in New York City. Her father, TV producer Sylvester L. Weaver Jr., originally wanted to name her Flavia, because of his passion for Roman history (he had already named her elder brother Trajan). Her mother, Elizabeth Inglis, was a British actress who had sacrificed her career for a family. Sigourney grew up in a virtual bubble
+ of guiltless bliss, being taken care by nannies and maids</li>
+</ul>
+		</div>
+<div id="quote">
+<h3>Quotes</h3>
+<ul>
+	<li>Jake Sully : I know one thing: wherever we go, this family... is our fortress.
+	</li>	
+<li>Quaritch : [to Neytiri]  I owe you a death.<br/>
 
+[Neytiri snarls at him] <br/>
+
+Quaritch : You're not leaving are you, Jake? Knowin' I'm out there. Knowin' that I'll never stop.
+ I'm coming for you. And when I do, I'll kill your whole family.<br/>
+
+Jake Sully : Then let's get it done.</li>
+<li>[from trailer] <br/>
+
+Neytiri : This is our home!	</li>
+</ul>
+		</div>
+	</section>
 </body>
 
 </html>
