--- a/main.html
+++ b/main.html
@@ -51,6 +51,15 @@ Neytiri : This is our home!	</li>
 </ul>
 		</div>
 	</section>
+<aside>
+	<ul>
+		<li>
+
+IMDb Rating : 7.9
+</li>
+<li> Release : Dec 2022</li>
+	</ul>
+</aside>
 </body>
 
 </html>
