--- a/main.html
+++ b/main.html
@@ -60,6 +60,9 @@ IMDb Rating : 7.9
 <li> Release : Dec 2022</li>
 	</ul>
 </aside>
+<footer>
+	<p>Produced by: &lt James Cameron &gt</p>
+</footer>
 </body>
 
 </html>
