--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 <h1>Avatar: The Way of Water</h1>
 	<nav class="nav_Bar">
-		<ul>
-			<li id="nav-actor"><a href="#actor">Actors</a></li>
-			<li id="nav-quote"><a href="#quote">Quote</a></li>
-		</ul>
+		
+			<p id="nav-actor"><a href="#actor">Actors</a></p>
+			<p="nav-quote"><a href="#quote">Quote</a></p>
+		
 	</nav>
 	<summary>
 			<p>Jake Sully lives with his newfound family formed on the extrasolar moon Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri 
