--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<nav class="nav_Bar">
 		
 			<p id="nav-actor"><a href="#actor">Actors</a></p>
-			<p="nav-quote"><a href="#quote">Quote</a></p>
+			<p id="nav-quote"><a href="#quote">Quote</a></p>
 		
 	</nav>
 	<summary>
